# libwbxml

./: .gitignore  Makefile  README.md  checksum.exs  mix.exs
.github/workflows/: ci.yml  release.yml
lib/: libwbxml.ex
native/: CMakeLists.txt  wbxml_config.h  wbxml_config_internals.h  wbxml_nif.c
test/: libwbxml_roundtrip_test.exs  libwbxml_test.exs
test/fixtures/: ping_status_1.xml  sync_initial_no_events.xml
